--- a/app/content/web3-roadmap.mdx
+++ b/app/content/web3-roadmap.mdx
@@ -8,8 +8,8 @@ coverImage: '/static/png/about.jpeg'
 # “Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Become a Web3 Developer in 2022
 
 ## 20+ documentations, tutorials, and videos to help you get started with Web3
-
-Background Photo by [Alexander Shatov](https://unsplash.com/@alexbemore?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com/?utm_source=medium&utm_medium=referral). Edited by author using Canvas
+![Background Photo by Alexander Shatov](/static/blog/p-02/1.webp)
+<em>Background Photo by [Alexander Shatov](https://unsplash.com/@alexbemore?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com/?utm_source=medium&utm_medium=referral). Edited by author using Canvas</em>
 
 Twitter went crazy last month when Musk and Dorsey mocked the idea of Web3. Few called it the future of the internet and few called it to be bogus. But do you know what exactly is Web 3.0 and how does it work? In this article, you’ll be introduced to the new dimension of the internet and how to get started in this field from a developer’s point of view.
 
@@ -43,7 +43,8 @@ It’s not hard to figure out that all of these talks revolve around some crypto
 
 We are in the very early stages of development and there are bound to be many projects with flaws. However eventually as more people adopt it the use cases start becoming the reality and that is when we will see true decentralization. You can’t be decentralized if everyone isn’t participating.
 
-[@ianDAOs](https://twitter.com/ianDAOs/status/1473709735694241805) on Twitter
+![Tweet by @ianDAOs](/static/blog/p-02/2.png)
+<em>[@ianDAOs](https://twitter.com/ianDAOs/status/1473709735694241805) on Twitter</em>
 
 # Developer Roadmap To Get Started With Web 3.0
 
@@ -60,8 +61,8 @@ Blockchains are a fantastic piece of technology, but they aren’t easy to under
 - [Blockchain Explained \[YouTube\]](https://www.youtube.com/watch?v=qOVAbKKSH10)
 
 ## 3\. Learn about Metamask or any equivalent Crypto Wallet
-
-Official logo
+![Official logo](/static/blog/p-02/3.webp)
+<em>Official logo</em>
 
 Metamask is a wallet used to interact with the blockchain. This is a very basic skill expected from a crypto user, however, developers should know more than the average user. Like how to programmatically request network change and detect current accounts and networks.
 
@@ -80,8 +81,8 @@ Smart contracts are how you can actually program the blockchain. They are pieces
 - [Smart Contracts \[Coursera\]](https://www.coursera.org/learn/smarter-contracts)
 
 ## 5\. Learn Solidity
-
-Image from [https://en.bitcoinwiki.org/wiki/Solidity](https://en.bitcoinwiki.org/wiki/Solidity)
+![Image from https://en.bitcoinwiki.org/wiki/Solidity](/static/blog/p-02/4.png)
+<em>Image from [https://en.bitcoinwiki.org/wiki/Solidity](https://en.bitcoinwiki.org/wiki/Solidity)</em>
 
 New language based on Ethereum Virtual machine. For Solana and Near, learn the Rust language. But this article is solely focused on EVM, so let’s dive into Solidity. The language is under very quick development, new versions roll out pretty quick so don’t get overwhelmed. Reading habit is recommended as some of the good tutorials are in text not in video format.
 
@@ -98,8 +99,8 @@ Best way to start Solidity is by [creating some Zombies](https://cryptozombies.i
 - [Dapp University \[YouTube\]](https://www.youtube.com/c/DappUniversity/playlists)
 
 ## 6\. Learn How To Interface With The Blockchain
-
-Web3.js logo
+![Web3.js logo](/static/blog/p-02/5.webp)
+<em>Web3.js logo</em>
 
 Decentralized apps consist of two components: Your frontend and smart contracts executed on the blockchain. For your front end to talk to the blockchain, you’ll need to interface with it. Here are two popular choices to interface with blockchains that implement the Ethereum API, web3.js and ethers.js.
 
