--- a/app/content/web-dev-roadmap.mdx
+++ b/app/content/web-dev-roadmap.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Starting Web Development the right way in 2021'
 desc: 'In the past few years, Web Development has become a hot topic among developers and numerous coders are eventually getting into it. This resulted in enormous amount of online resources, roadmaps, video guides and a lot more which are hard to digest all at once. Moreover, the technology present yesterday is getting obselete today, which makes it hard to stick to a Tech stack while getting started. So, In this article youll get'
-publishedDate: '01/01/2023'
+publishedDate: 'Sep 4, 2021'
 coverImage: '/static/blog/p-01/7.webp'
 ---
 
