feat: share blog, fix responsiveness

--- a/app/content/web3-roadmap.mdx
+++ b/app/content/web3-roadmap.mdx
@@ -70,9 +70,7 @@ Metamask is a wallet used to interact with the blockchain. This is a very basic 
 - [Setting Up Metamask Wallet](https://www.youtube.com/watch?v=MfkqgXNPiHg)
 - [Metamask for Developers: Building First Web3 Apps Step By Step](https://www.youtube.com/watch?v=9kdVAeZ7knk)
 
-```
-**Additional: Learn How to read transactions with a Block Explorer**Start with any Block explorer like [EtherScan](https://etherscan.io/) or [BlockExplorer](https://blockexplorer.com/). Try understanding what each term means, google them, there is a lot to learn here. A lot of people don’t know how to read the transactions. Also, learn by reading code of other popular smart contracts most of them are Open Source. Learn how to verify a contract from explorer.
-```
+> **Additional: Learn How to read transactions with a Block Explorer**Start with any Block explorer like [EtherScan](https://etherscan.io/) or [BlockExplorer](https://blockexplorer.com/). Try understanding what each term means, google them, there is a lot to learn here. A lot of people don’t know how to read the transactions. Also, learn by reading code of other popular smart contracts most of them are Open Source. Learn how to verify a contract from explorer.
 
 ## **4.** **Learn About Smart Contracts**
 
@@ -86,9 +84,7 @@ Smart contracts are how you can actually program the blockchain. They are pieces
 
 New language based on Ethereum Virtual machine. For Solana and Near, learn the Rust language. But this article is solely focused on EVM, so let’s dive into Solidity. The language is under very quick development, new versions roll out pretty quick so don’t get overwhelmed. Reading habit is recommended as some of the good tutorials are in text not in video format.
 
-```
-Best way to start Solidity is by [creating some Zombies](https://cryptozombies.io/).
-```
+> Best way to start Solidity is by [creating some Zombies](https://cryptozombies.io/).
 
 - [Solidity by Examples](https://solidity-by-example.org/)
 - [Solidity Tutorial: A Full Course on Ethereum, Blockchain Development, Smart Contracts, and the EVM](https://www.youtube.com/watch?v=ipwxYa-F1uY)
