feat: dynamic og image generation

--- a/app/content/web-dev-roadmap.mdx
+++ b/app/content/web-dev-roadmap.mdx
@@ -2,7 +2,7 @@
 title: 'Starting Web Development the right way in 2021'
 desc: 'In the past few years, Web Development has become a hot topic among developers and numerous coders are eventually getting into it. This resulted in enormous amount of online resources, roadmaps, video guides and a lot more which are hard to digest all at once. Moreover, the technology present yesterday is getting obselete today, which makes it hard to stick to a Tech stack while getting started. So, In this article youll get'
 publishedDate: 'Sep 4, 2021'
-coverImage: '/static/blog/p-01/7.webp'
+coverImage: '/static/blog/p-01/7.png'
 ---
 
 # Starting Web Development the right way in 2021
@@ -111,7 +111,7 @@ Now, you’re strong enough to build your own projects but how would you show it
 - Yarn Package manager Crash course: [https://youtu.be/g9_6KmiBISk](https://youtu.be/g9_6KmiBISk)
 
 **6\. Javascript Framework:**
-![Image from https://bit.ly/3n47owu](/static/blog/p-01/7.webp)
+![Image from https://bit.ly/3n47owu](/static/blog/p-01/7.png)
 <em>Image from [https://bit.ly/3n47owu](https://bit.ly/3n47owu)</em>
 
 It’s time to make your website more **feature-rich and sophisticated**. JS Framework make processes of handling states, re-rendering and many other things easier. By now, you’d have understood how useful using a framework can be, so it’s time to learn one! There are many out there **React, Svelte, Vue, Angular** and others. But, based on the current trend I personally suggest learning react.js. Remember that React is a library and not a framework, but learning it along with some other tools would make your frontend tech stack very powerful. Start by learning React fundamentals, Router, Webpack, Server Renders, Redux and others. Also add some tools to your bucket by learning **React Query** which is now a standard for network requests and learn a **UI library** like Material UI or Tailwind CSS.
