--- a/app/content/web3-roadmap.mdx
+++ b/app/content/web3-roadmap.mdx
@@ -2,13 +2,13 @@
 title: '“Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Become a Web3 Developer in 2022'
 desc: 'Twitter went crazy last month when Musk and Dorsey mocked the idea of Web3. Few called it the future of the internet and few called it to be bogus. But do you know what exactly is Web 3.0 and how does it work? In this article, you’ll be introduced to the new dimension of the internet and how to get started in this field from a developer’s point of view.'
 publishedDate: 'Jan 8, 2022'
-coverImage: '/static/blog/p-02/1.webp'
+coverImage: '/static/blog/p-02/1.png'
 ---
 
 # “Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Become a Web3 Developer in 2022
 
 ## 20+ documentations, tutorials, and videos to help you get started with Web3
-![Background Photo by Alexander Shatov](/static/blog/p-02/1.webp)
+![Background Photo by Alexander Shatov](/static/blog/p-02/1.png)
 <em>Background Photo by [Alexander Shatov](https://unsplash.com/@alexbemore?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com/?utm_source=medium&utm_medium=referral). Edited by author using Canvas</em>
 
 Twitter went crazy last month when Musk and Dorsey mocked the idea of Web3. Few called it the future of the internet and few called it to be bogus. But do you know what exactly is Web 3.0 and how does it work? In this article, you’ll be introduced to the new dimension of the internet and how to get started in this field from a developer’s point of view.
