feat: search improvements with tags

--- a/app/content/web-dev-roadmap.mdx
+++ b/app/content/web-dev-roadmap.mdx
@@ -3,6 +3,7 @@ title: 'Starting Web Development the right way in 2021'
 desc: 'In the past few years, Web Development has become a hot topic among developers and numerous coders are eventually getting into it. This resulted in enormous amount of online resources, roadmaps, video guides and a lot more which are hard to digest all at once. Moreover, the technology present yesterday is getting obselete today, which makes it hard to stick to a Tech stack while getting started. So, In this article youll get'
 publishedDate: 'Sep 4, 2021'
 coverImage: '/static/blog/p-01/7.png'
+tags: 'WebDev,Roadmap,Frontend,Backend,Web Development,Frontend Development,Backend Development,Roadmap to Web Development,Starting Web Development,Web Development Trends,HTML,CSS,JavaScript,Frameworks in Web Development,Frontend Technologies,Backend Technologies,Web Application Development,Learn Web Development,Developer Tools,Chrome DevTools,Git and GitHub,Version Control,React.js,JavaScript Frameworks,Next.js,Server Side Rendering (SSR),SEO in Web Development,UI/UX Design,Full Stack Web Development'
 ---
 
 # Starting Web Development the right way in 2021
