--- a/app/content/web3-roadmap.mdx
+++ b/app/content/web3-roadmap.mdx
@@ -3,6 +3,7 @@ title: '“Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Be
 desc: 'Twitter went crazy last month when Musk and Dorsey mocked the idea of Web3. Few called it the future of the internet and few called it to be bogus. But do you know what exactly is Web 3.0 and how does it work? In this article, you’ll be introduced to the new dimension of the internet and how to get started in this field from a developer’s point of view.'
 publishedDate: 'Jan 8, 2022'
 coverImage: '/static/blog/p-02/1.png'
+tags: 'Web3,Roadmap,Blockchain,Solidity,Web3,Web Development,Roadmap,Web3 Developer,Blockchain Technology,Crypto Wallet,Metamask,Smart Contracts,Solidity,Web3.js,Ethers.js,Testing Smart Contracts,Deploying Smart Contracts,Hard Hat,Communities,Hackathons,Developer DAO,Buildspace,Dacade,Pot Heads,Explorer Guide,Web3Community,Figment,Questbook,SuperTeamDAO,Devpost,Gitcoin,Hackerlink,ETHGlobal,Blockchain Development'
 ---
 
 # “Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Become a Web3 Developer in 2022
