feat: readnext, backtoblog

--- a/app/content/web-dev-roadmap.mdx
+++ b/app/content/web-dev-roadmap.mdx
@@ -4,6 +4,7 @@ desc: 'In the past few years, Web Development has become a hot topic among devel
 publishedDate: 'Sep 4, 2021'
 coverImage: '/static/blog/p-01/7.png'
 tags: 'WebDev,Roadmap,Frontend,Backend,Web Development,Frontend Development,Backend Development,Roadmap to Web Development,Starting Web Development,Web Development Trends,HTML,CSS,JavaScript,Frameworks in Web Development,Frontend Technologies,Backend Technologies,Web Application Development,Learn Web Development,Developer Tools,Chrome DevTools,Git and GitHub,Version Control,React.js,JavaScript Frameworks,Next.js,Server Side Rendering (SSR),SEO in Web Development,UI/UX Design,Full Stack Web Development'
+nextSlug: 'web3-roadmap'
 ---
 
 # Starting Web Development the right way in 2021
