--- a/app/content/web3-roadmap.mdx
+++ b/app/content/web3-roadmap.mdx
@@ -4,6 +4,7 @@ desc: 'Twitter went crazy last month when Musk and Dorsey mocked the idea of Web
 publishedDate: 'Jan 8, 2022'
 coverImage: '/static/blog/p-02/1.png'
 tags: 'Web3,Roadmap,Blockchain,Solidity,Web3,Web Development,Roadmap,Web3 Developer,Blockchain Technology,Crypto Wallet,Metamask,Smart Contracts,Solidity,Web3.js,Ethers.js,Testing Smart Contracts,Deploying Smart Contracts,Hard Hat,Communities,Hackathons,Developer DAO,Buildspace,Dacade,Pot Heads,Explorer Guide,Web3Community,Figment,Questbook,SuperTeamDAO,Devpost,Gitcoin,Hackerlink,ETHGlobal,Blockchain Development'
+nextSlug: 'web-dev-roadmap'
 ---
 
 # “Has Anyone Seen Web3?” — The Complete Roadmap and Resources to Become a Web3 Developer in 2022
