--- a/app/content/pondicherry-guide.mdx
+++ b/app/content/pondicherry-guide.mdx
@@ -210,24 +210,73 @@ We took a train ride, had dinner, and played fun games like *Heads Up* and *Amon
 ### **Day 2:**
 We woke up early to catch the sunrise at **Serenity Beach**—it was beautiful! After breakfast at **Indian Coffee House**, we explored Pondicherry’s must-visit spots like **Sri Aurobindo Ashram**, **Manakula Vinayagar Temple**, and the **Sacred Heart Basilica, Science Center & Planetarium**. Lunch was at **Copper Kitchen**, followed by a relaxing break at **Bharathi Park**, where we played games and made reels. We ended the trip with a chill evening at **Eden Beach**, packed up, and headed home.
 
-| **Item** | **Amount (Per person)** |
-| --- | --- |
-| Train Ticket - 3AC | ₹ 745 |
-| Return Bus | ₹ 764 |
-| Scooty Rental + Petrol | ₹ 420 |
-| Stay - 1 Day | ₹ 882 |
-| Auto x 3 | ₹ 130 |
-| Breakfast - D1 (Average) | ₹ 100 |
-| Breakfast - D2 (Average) | ₹ 80 |
-| Lunch - D1 (Average) | ₹ 300 |
-| Lunch - D2 (Average) | ₹ 300 |
-| Dinner - D1 (Average) | ₹ 320 |
-| Mangrove Motorboating | ₹ 400 |
-| Museum Entry, Science Center Entry, Beach parking | ₹ 50 |
-| Baggage Locker - 11hrs | ₹ 60 |
-| Personal Expenses (Average)* | ₹ 400 |
-| **Approx** | **₹ 4951** |
-
-> *Personal Expenses are particular to each person. This can amount upto 400 on an average.
+<table>
+    <tbody>
+    <tr>
+        <td>**Item**</td>
+        <td>**Amount (Per person)**</td>
+    </tr>
+    <tr>
+        <td>Train Ticket - 3AC</td>
+        <td>₹ 745</td>
+    </tr>
+    <tr>
+        <td>Return Bus</td>
+        <td>₹ 764</td>
+    </tr>
+    <tr>
+        <td>Scooty Rental + Petrol</td>
+        <td>₹ 420</td>
+    </tr>
+    <tr>
+        <td>Stay - 1 Day</td>
+        <td>₹ 882</td>
+    </tr>
+    <tr>
+        <td>Auto x 3</td>
+        <td>₹ 130</td>
+    </tr>
+    <tr>
+        <td>Breakfast - D1 (Average)</td>
+        <td>₹ 100</td>
+    </tr>
+    <tr>
+        <td>Breakfast - D2 (Average)</td>
+        <td>₹ 80</td>
+    </tr>
+    <tr>
+        <td>Lunch - D1 (Average)</td>
+        <td>₹ 300</td>
+    </tr>
+    <tr>
+        <td>Lunch - D2 (Average)</td>
+        <td>₹ 300</td>
+    </tr>
+    <tr>
+        <td>Dinner - D1 (Average)</td>
+        <td>₹ 320</td>
+    </tr>
+    <tr>
+        <td>Mangrove Motorboating</td>
+        <td>₹ 400</td>
+    </tr>
+    <tr>
+        <td>Museum Entry, Science Center Entry, Beach parking</td>
+        <td>₹ 50</td>
+    </tr>
+    <tr>
+        <td>Baggage Locker - 11hrs</td>
+        <td>₹ 60</td>
+    </tr>
+    <tr>
+        <td>Personal Expenses (Average)*</td>
+        <td>₹ 400</td>
+    </tr>
+    <tr>
+        <td>**Approx**</td>
+        <td>**₹ 4951**</td>
+    </tr>
+    </tbody>
+</table>
 
 I hope this guide inspires you to pack your bags, stick to your budget, and create unforgettable memories. If you’ve found this blog helpful, don’t forget to share your Pondicherry experiences in the comments below. Bon voyage!
